[gd_scene load_steps=6 format=3 uid="uid://b4yfo8lai86mp"]

[ext_resource type="Script" path="res://Scripts/Note.gd" id="1_awum4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8aqkd"]
bg_color = Color(0, 0.486275, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_850ju"]
bg_color = Color(0.784314, 0, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y7vef"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ckree"]

[node name="Note" type="Node2D" groups=["note"]]
script = ExtResource("1_awum4")

[node name="Button" type="Button" parent="."]
offset_left = -70.0
offset_top = -53.0
offset_right = 70.0
offset_bottom = 53.0
theme_override_styles/normal = SubResource("StyleBoxFlat_8aqkd")
theme_override_styles/hover = SubResource("StyleBoxFlat_850ju")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_y7vef")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ckree")
action_mode = 0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
rotation = -1.5708
emitting = false
amount = 50
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
emission_shape = 1
emission_sphere_radius = 25.0
spread = 100.0
initial_velocity_min = 400.0
initial_velocity_max = 400.0
scale_amount_min = 2.0
scale_amount_max = 4.0

[node name="DestroyTimer" type="Timer" parent="."]
autostart = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, -60)

[node name="Label" type="Label" parent="Node2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -20.0
offset_right = 59.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
